--- a/Untitled Folder/PROGRAMA .ipynb
+++ b/Untitled Folder/PROGRAMA .ipynb
@@ -7,13 +7,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "08dc27c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ini_df():\n",
+    "    df = pd.read_csv(\n",
+    "        'DATOS PROGRAMA.txt', sep=\" \",header=None, names=['DELTA', 'DISTANCIA', 'HORIZONTAL','VERTICAL','E','AI','AP'])\n",
+    "    return df\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a91439e0",
    "metadata": {},
    "outputs": [
     {
@@ -37,75 +52,238 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
+       "      <th>DELTA</th>\n",
+       "      <th>DISTANCIA</th>\n",
+       "      <th>HORIZONTAL</th>\n",
+       "      <th>VERTICAL</th>\n",
+       "      <th>E</th>\n",
+       "      <th>AI</th>\n",
+       "      <th>AP</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>DELTA1</td>\n",
-       "      <td>61.3460</td>\n",
-       "      <td>22</td>\n",
-       "      <td>31</td>\n",
-       "      <td>25</td>\n",
-       "      <td>88</td>\n",
-       "      <td>39</td>\n",
-       "      <td>60</td>\n",
+       "      <td>61.35</td>\n",
+       "      <td>22.3125</td>\n",
+       "      <td>88.3936</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>LIB1</td>\n",
-       "      <td>38.6711</td>\n",
-       "      <td>120</td>\n",
-       "      <td>4</td>\n",
-       "      <td>19</td>\n",
-       "      <td>87</td>\n",
-       "      <td>6</td>\n",
-       "      <td>11</td>\n",
+       "      <td>38.72</td>\n",
+       "      <td>120.0419</td>\n",
+       "      <td>87.0224</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>LIB2</td>\n",
-       "      <td>87.5691</td>\n",
-       "      <td>37</td>\n",
-       "      <td>24</td>\n",
-       "      <td>15</td>\n",
-       "      <td>92</td>\n",
-       "      <td>55</td>\n",
-       "      <td>7</td>\n",
+       "      <td>87.49</td>\n",
+       "      <td>37.2415</td>\n",
+       "      <td>92.5336</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>1.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        0        1    2   3   4   5   6   7\n",
-       "0  DELTA1  61.3460   22  31  25  88  39  60\n",
-       "1    LIB1  38.6711  120   4  19  87   6  11\n",
-       "2    LIB2  87.5691   37  24  15  92  55   7"
+       "    DELTA  DISTANCIA  HORIZONTAL  VERTICAL    E    AI    AP\n",
+       "0  DELTA1      61.35     22.3125   88.3936  0.0  1.41  0.15\n",
+       "1    LIB1      38.72    120.0419   87.0224  0.0  1.44  1.50\n",
+       "2    LIB2      87.49     37.2415   92.5336  0.0  1.46  1.50"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\n",
-    "    'DATOS PROCESADOS.txt', sep=\" \",header=None)\n",
-    "df"
+    "#CONVERTIR GMS A DEC\n",
+    "def conv_gms_dd(gms):\n",
+    "    \n",
+    "    dd=float(gms[0])+float(gms[1])/60+float(gms[2])/(60*60);\n",
+    "    return dd\n",
+    "def dd2dms(deg):\n",
+    "    d=int(deg)\n",
+    "    md= abs(deg-d)*60\n",
+    "    m=int(md)\n",
+    "    sd=(md-m)*60\n",
+    "    return [d,m,sd]\n",
+    "\n",
+    "def parse_dms(dms):\n",
+    "    return (str(dms[0])+ \"\\u00b0 \" +str(dms[1])+ \"\\' \" + str(dms[2])+'\"')\n",
+    "\n",
+    "#TOMA TRES COLUMNA DE GRADOS MINUTOS SEGUNDOS DEL DATAFRAME Y CREA COLUMNA CONCATENAR Y DECIMAL\n",
+    "def conv_g_m_s_df(data):\n",
+    "    \n",
+    "    a = df [data].astype(str)\n",
+    "    b=a.str.split('.',expand=True)\n",
+    "    c=b.rename(columns={0:'grad', 1:'min'})\n",
+    "    new_c=c.assign(seg=0)\n",
+    "\n",
+    "    l1=c['min'].tolist()\n",
+    "    l_min=[]\n",
+    "    l_seg=[]\n",
+    "\n",
+    "    for elemento in l1:\n",
+    "        elemento1=elemento[:len(elemento)//2]\n",
+    "        elemento2=elemento[len(elemento)//2:]\n",
+    "        l_min.append(elemento1)\n",
+    "        l_seg.append(elemento2)\n",
+    "\n",
+    "    new_c['min']=(l_min)\n",
+    "    new_c['seg']=(l_seg)\n",
+    "    new_c.astype(int)\n",
+    "    new_c['conc']=new_c.apply(parse_dms, axis = 1)\n",
+    "    new_c['decimal']=new_c.apply(conv_gms_dd, axis = 1)\n",
+    "    return new_c\n",
+    "    \n",
+    "def error_horizontal(df):\n",
+    "    puntos = len(df.index)\n",
+    "    ideal=180*(puntos-2)\n",
+    "    error=ideal-df[\"HORIZONTAL\"].sum()\n",
+    "    return error\n",
+    "\n",
+    "def correccion_horizontal(df):\n",
+    "    return df[\"HORIZONTAL\"]+(error_hor/len(df.index))\n",
+    "def escribirgms_hor_corr(df):\n",
+    "    return parse_dms(dd2dms(df[8]))\n",
+    "def escribirgms_hor(df):\n",
+    "    return parse_dms(dd2dms(df[2]))\n",
+    "    \n",
+    "\n",
+    "ini_df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "id": "437d87d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DELTA</th>\n",
+       "      <th>DISTANCIA</th>\n",
+       "      <th>HORIZONTAL</th>\n",
+       "      <th>VERTICAL</th>\n",
+       "      <th>E</th>\n",
+       "      <th>AI</th>\n",
+       "      <th>AP</th>\n",
+       "      <th>HOR_E</th>\n",
+       "      <th>HOR_CORR</th>\n",
+       "      <th>HOR_CORR_E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DELTA1</td>\n",
+       "      <td>61.35</td>\n",
+       "      <td>22.523611</td>\n",
+       "      <td>88.660000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>22° 31' 24.999999999990905\"</td>\n",
+       "      <td>22.523704</td>\n",
+       "      <td>22° 31' 25.33333333331683\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LIB1</td>\n",
+       "      <td>38.72</td>\n",
+       "      <td>120.071944</td>\n",
+       "      <td>87.040000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>120° 4' 18.99999999998613\"</td>\n",
+       "      <td>120.072037</td>\n",
+       "      <td>120° 4' 19.333333333324845\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LIB2</td>\n",
+       "      <td>87.49</td>\n",
+       "      <td>37.404167</td>\n",
+       "      <td>92.893333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>37° 24' 15.000000000006821\"</td>\n",
+       "      <td>37.404259</td>\n",
+       "      <td>37° 24' 15.333333333319956\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    DELTA  DISTANCIA  HORIZONTAL   VERTICAL    E    AI    AP  \\\n",
+       "0  DELTA1      61.35   22.523611  88.660000  0.0  1.41  0.15   \n",
+       "1    LIB1      38.72  120.071944  87.040000  0.0  1.44  1.50   \n",
+       "2    LIB2      87.49   37.404167  92.893333  0.0  1.46  1.50   \n",
+       "\n",
+       "                         HOR_E    HOR_CORR                   HOR_CORR_E  \n",
+       "0  22° 31' 24.999999999990905\"   22.523704   22° 31' 25.33333333331683\"  \n",
+       "1   120° 4' 18.99999999998613\"  120.072037  120° 4' 19.333333333324845\"  \n",
+       "2  37° 24' 15.000000000006821\"   37.404259  37° 24' 15.333333333319956\"  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=ini_df()    \n",
+    "df_new_H=df\n",
+    "df_new_H['HORIZONTAL'] = conv_g_m_s_df(\"HORIZONTAL\")['decimal']\n",
+    "df_new_H[\"HOR_E\"]= df_new_H.apply(escribirgms_hor, axis=1)\n",
+    "df_new_H['VERTICAL'] = conv_g_m_s_df(\"VERTICAL\")['decimal']\n",
+    "error_hor=error_horizontal(df_new_H)\n",
+    "\n",
+    "df_new_H[\"HOR_CORR\"]= df_new_H[\"HORIZONTAL\"]+(error_hor/len(df.index))\n",
+    "df_new_H[\"HOR_CORR_E\"]= df_new_H.apply(escribirgms_hor_corr, axis=1)\n",
+    "df_new_H\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a6d4d85d",
    "metadata": {},
    "outputs": [],
@@ -121,22 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9104143e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pdfkit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-68e740b059a3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpdfkit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mpdfkit\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.html'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'out.pdf'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pdfkit'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
